fix image paths

--- a/en/index.html
+++ b/en/index.html
@@ -1219,66 +1219,66 @@
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<p style="font-size: 17px;">The group ÉS co-organizes the Hacking Industry Camp</p><br>
-						<a href="http://www.es-groupe.fr/" target="_blank"><img src="images/contents/logo ES2.jpg" alt="ES"></a>
+						<a href="http://www.es-groupe.fr/" target="_blank"><img src="../images/contents/logo ES2.jpg" alt="ES"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Gold Sponsors</h3><br>
-						<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="images/contents/socomec.png" alt="Socomec France"></a>
-						<a href="http://www.strasbourg.port.fr/" target="_blank"><img src="images/contents/pas.png" alt="Port Autonome de Strasbourg"></a>
-						<a href="http://strasbourg.eu/" target="_blank"><img src="images/contents/banner-stras.png" alt="Strasbourg.eu"></a>
+						<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="../images/contents/socomec.png" alt="Socomec France"></a>
+						<a href="http://www.strasbourg.port.fr/" target="_blank"><img src="../images/contents/pas.png" alt="Port Autonome de Strasbourg"></a>
+						<a href="http://strasbourg.eu/" target="_blank"><img src="../images/contents/banner-stras.png" alt="Strasbourg.eu"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Silver Sponsors</h3><br>
-						<a href="http://www.caisse-epargne.fr/" target="_blank"><img src="images/contents/caisse-epargne.jpg" alt="Caisse d'Epargne Alsace"></a>						
-						<a href="http://www.hagergroup.com/" target="_blank"><img src="images/contents/hager-group.png" alt="Hager"></a>				
-						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>
-						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 8px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
-						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>
-						<a href="https://www.orange.fr/" target="_blank"><img src="images/contents/orange.png" alt="orange"></a>
-						<!--<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
-						<a href="https://www.interregeurope.eu/" target="_blank"><img src="images/contents/interreg.jpg" alt="Interreg Europe"></a>-->
+						<a href="http://www.caisse-epargne.fr/" target="_blank"><img src="../images/contents/caisse-epargne.jpg" alt="Caisse d'Epargne Alsace"></a>						
+						<a href="http://www.hagergroup.com/" target="_blank"><img src="../images/contents/hager-group.png" alt="Hager"></a>				
+						<a href="http://www.rhenatic.eu/" target="_blank"><img src="../images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>
+						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 8px;"><img src="../images/contents/strataggem.png" alt="Strataggem"></a>
+						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="../images/contents/insa.png" alt="INSA Strasbourg"></a>
+						<a href="https://www.orange.fr/" target="_blank"><img src="../images/contents/orange.png" alt="orange"></a>
+						<!--<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="../images/contents/regiongrandest.png" alt="Région Grand Est"></a>
+						<a href="https://www.interregeurope.eu/" target="_blank"><img src="../images/contents/interreg.jpg" alt="Interreg Europe"></a>-->
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Bronze Sponsors</h3><br>
 						<a href="http://scalingo.com" target="_blank"><img width="220" src="images/contents/scalingo.svg" alt="Scalingo"></a>
-						<a href="https://its-future.com/" target="_blank"><img src="images/contents/its.png" alt="its future"></a>
-						<a href="http://www.agoracalyce.com/" target="_blank"><img src="images/contents/agora.png" alt="Agora Calycé"></a>
-						<a href="https://www.thurmelec.fr/" target="_blank"><img src="images/contents/thurmelec.jpg" alt="thurmelec"></a>
-						<a href="https://fr.rs-online.com/web/" target="_blank"><img src="images/contents/rs.png" alt="rs"></a>
-						<a href="http://technologyandstrategy.group/" target="_blank"><img src="images/contents/ts.jpg" alt="ts"></a>
-						<a href="https://www.soprasteria.com/" target="_blank"><img src="images/contents/sopra.jpg" alt="sopra steria"></a>
-						<a href="https://www.fr.sogeti.com/" target="_blank"><img src="images/contents/sogeti.jpg" alt="sogeti"></a>
+						<a href="https://its-future.com/" target="_blank"><img src="../images/contents/its.png" alt="its future"></a>
+						<a href="http://www.agoracalyce.com/" target="_blank"><img src="../images/contents/agora.png" alt="Agora Calycé"></a>
+						<a href="https://www.thurmelec.fr/" target="_blank"><img src="../images/contents/thurmelec.jpg" alt="thurmelec"></a>
+						<a href="https://fr.rs-online.com/web/" target="_blank"><img src="../images/contents/rs.png" alt="rs"></a>
+						<a href="http://technologyandstrategy.group/" target="_blank"><img src="../images/contents/ts.jpg" alt="ts"></a>
+						<a href="https://www.soprasteria.com/" target="_blank"><img src="../images/contents/sopra.jpg" alt="sopra steria"></a>
+						<a href="https://www.fr.sogeti.com/" target="_blank"><img src="../images/contents/sogeti.jpg" alt="sogeti"></a>
 					</div>
 					
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">They support Hacking Industry Camp</h3><br>
-						<a href="http://www.alsacetech.org/" target="_blank"><img src="images/contents/alsacetech.jpg" alt="Alsace Tech" style="width: 220px;"></a>
-						<a href="http://www.creaccro.eu/" target="_blank"><img src="images/contents/accro.jpg" alt="Accro"></a>
-						<a href="http://alsace.com/" target="_blank"><img src="images/contents/aaa.jpg" alt="Agence Attractivité Alsace"></a>
-						<a href="http://lafab.org" target="_blank"><img src="images/contents/lafabrique.jpg" alt="La Fabrique"></a>
+						<a href="http://www.alsacetech.org/" target="_blank"><img src="../images/contents/alsacetech.jpg" alt="Alsace Tech" style="width: 220px;"></a>
+						<a href="http://www.creaccro.eu/" target="_blank"><img src="../images/contents/accro.jpg" alt="Accro"></a>
+						<a href="http://alsace.com/" target="_blank"><img src="../images/contents/aaa.jpg" alt="Agence Attractivité Alsace"></a>
+						<a href="http://lafab.org" target="_blank"><img src="../images/contents/lafabrique.jpg" alt="La Fabrique"></a>
 						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img style="height: 150px;" src="images/contents/fta2.png" alt="La French Tech Alsace"></a>
-						<a href="http://alsace.cci.fr/" target="_blank"><img src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
-						<a href="http://adira.com/" target="_blank"><img src="images/contents/adira.png" alt="Adira"></a>
-						<a href="https://www.grandenov.fr/" target="_blank"><img src="images/contents/grandenov.png" style="background: white;" alt="Grand E-nov"></a>
-						<a href="http://maddyness.com/" target="_blank"><img src="images/contents/maddyness.jpg" alt="Maddyness"></a>
-						<a href="http://www.xfive.be/" target="_blank"><img src="images/contents/xfive.jpg" alt="XFive"></a>
-						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
-						<a href="http://duipi.unistra.fr/" target="_blank"><img src="images/contents/ipi.png" alt="IPI"></a>
-						<!--<a href="http://innovationweek.org/france/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>-->
-						<a href="http://marque.alsace/" target="_blank"><img src="images/contents/acoeur.png" alt="Marque Alsace"></a>
-						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
-						<a href="http://alsacalcul.unistra.fr/" target="_blank"><img src="images/contents/alsacalcul.jpg" alt="Alsa Calcul"></a>
+						<a href="http://alsace.cci.fr/" target="_blank"><img src="../images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
+						<a href="http://adira.com/" target="_blank"><img src="../images/contents/adira.png" alt="Adira"></a>
+						<a href="https://www.grandenov.fr/" target="_blank"><img src="../images/contents/grandenov.png" style="background: white;" alt="Grand E-nov"></a>
+						<a href="http://maddyness.com/" target="_blank"><img src="../images/contents/maddyness.jpg" alt="Maddyness"></a>
+						<a href="http://www.xfive.be/" target="_blank"><img src="../images/contents/xfive.jpg" alt="XFive"></a>
+						<a href="http://cpc-analytics.fr" target="_blank"><img src="../images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
+						<a href="http://duipi.unistra.fr/" target="_blank"><img src="../images/contents/ipi.png" alt="IPI"></a>
+						<!--<a href="http://innovationweek.org/france/" target="_blank"><img src="../images/contents/innoweek.png" alt="Innoweek"></a>-->
+						<a href="http://marque.alsace/" target="_blank"><img src="../images/contents/acoeur.png" alt="Marque Alsace"></a>
+						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="../images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
+						<a href="http://alsacalcul.unistra.fr/" target="_blank"><img src="../images/contents/alsacalcul.jpg" alt="Alsa Calcul"></a>
 						<a href="http://www.conectus.fr/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/satt.png" alt="satt connectus"></a>
 						<!--<a href="https://www.federation-industries-alsace.com/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/fia.png" alt="fia"></a>
-						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>-->
+						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="../images/contents/prglobalmedia.png" alt="PR Global Media"></a>-->
 						<a href="http://http://epitech.eu/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/epitech.png" alt="Epitech"></a>
-						<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
-						<a href="https://sciencemeup.com/" target="_blank"><img src="images/contents/sciencemeup.png" alt="Science Me Up"></a>
-						<a href="https://www.eifer.kit.edu/" target="_blank"><img src="images/contents/eifer.png" style="background: #fff" alt="Eifer"></a>
-						<a href="https://www.edf.fr/" target="_blank"><img src="images/contents/edf.png" alt="EDF"></a>
+						<a href="http://www.reck.fr/" target="_blank"><img src="../images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
+						<a href="https://sciencemeup.com/" target="_blank"><img src="../images/contents/sciencemeup.png" alt="Science Me Up"></a>
+						<a href="https://www.eifer.kit.edu/" target="_blank"><img src="../images/contents/eifer.png" style="background: #fff" alt="Eifer"></a>
+						<a href="https://www.edf.fr/" target="_blank"><img src="../images/contents/edf.png" alt="EDF"></a>
 					</div>
 
 					<!--<div class="sponsors-row" data-animation="bounceIn">
