fix more image paths

--- a/en/index.html
+++ b/en/index.html
@@ -1243,7 +1243,7 @@
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Bronze Sponsors</h3><br>
-						<a href="http://scalingo.com" target="_blank"><img width="220" src="images/contents/scalingo.svg" alt="Scalingo"></a>
+						<a href="http://scalingo.com" target="_blank"><img width="220" src="../images/contents/scalingo.svg" alt="Scalingo"></a>
 						<a href="https://its-future.com/" target="_blank"><img src="../images/contents/its.png" alt="its future"></a>
 						<a href="http://www.agoracalyce.com/" target="_blank"><img src="../images/contents/agora.png" alt="Agora Calycé"></a>
 						<a href="https://www.thurmelec.fr/" target="_blank"><img src="../images/contents/thurmelec.jpg" alt="thurmelec"></a>
@@ -1259,7 +1259,7 @@
 						<a href="http://www.creaccro.eu/" target="_blank"><img src="../images/contents/accro.jpg" alt="Accro"></a>
 						<a href="http://alsace.com/" target="_blank"><img src="../images/contents/aaa.jpg" alt="Agence Attractivité Alsace"></a>
 						<a href="http://lafab.org" target="_blank"><img src="../images/contents/lafabrique.jpg" alt="La Fabrique"></a>
-						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img style="height: 150px;" src="images/contents/fta2.png" alt="La French Tech Alsace"></a>
+						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img style="height: 150px;" src="../images/contents/fta2.png" alt="La French Tech Alsace"></a>
 						<a href="http://alsace.cci.fr/" target="_blank"><img src="../images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
 						<a href="http://adira.com/" target="_blank"><img src="../images/contents/adira.png" alt="Adira"></a>
 						<a href="https://www.grandenov.fr/" target="_blank"><img src="../images/contents/grandenov.png" style="background: white;" alt="Grand E-nov"></a>
@@ -1271,10 +1271,10 @@
 						<a href="http://marque.alsace/" target="_blank"><img src="../images/contents/acoeur.png" alt="Marque Alsace"></a>
 						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="../images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
 						<a href="http://alsacalcul.unistra.fr/" target="_blank"><img src="../images/contents/alsacalcul.jpg" alt="Alsa Calcul"></a>
-						<a href="http://www.conectus.fr/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/satt.png" alt="satt connectus"></a>
-						<!--<a href="https://www.federation-industries-alsace.com/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/fia.png" alt="fia"></a>
+						<a href="http://www.conectus.fr/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="../images/contents/satt.png" alt="satt connectus"></a>
+						<!--<a href="https://www.federation-industries-alsace.com/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="../images/contents/fia.png" alt="fia"></a>
 						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="../images/contents/prglobalmedia.png" alt="PR Global Media"></a>-->
-						<a href="http://http://epitech.eu/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/epitech.png" alt="Epitech"></a>
+						<a href="http://http://epitech.eu/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="../images/contents/epitech.png" alt="Epitech"></a>
 						<a href="http://www.reck.fr/" target="_blank"><img src="../images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
 						<a href="https://sciencemeup.com/" target="_blank"><img src="../images/contents/sciencemeup.png" alt="Science Me Up"></a>
 						<a href="https://www.eifer.kit.edu/" target="_blank"><img src="../images/contents/eifer.png" style="background: #fff" alt="Eifer"></a>
