display hidden registration section

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
 
 
-			<!--<section id="closing" class="closing-section section-dark section">
+			<section id="closing" class="closing-section section-dark section">
 
 				<div class="section-background">
 
@@ -417,25 +417,25 @@
 
 				<div class="container">
 					<div class="row">
-						<div class="col-md-12">
+						<!--<div class="col-md-12">
 							<h3 class="closing-shout">L'événement #HICamp 2017 est fini, revivez l'événement à travers les photos prises par nos bénévoles !</h3>
 
 							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260"class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>
 						</div>-->
-						<!--<div class="col-md-6">
+						<div class="col-md-6">
 							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
 
-							<div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary">J'y vais !</a></div>
+							<div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary">J'y vais !</a></div>
 						</div>
 						<div class="col-md-6">
 							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
 
-							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2017.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
-						</div>-->
-					<!--</div>
+							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2018.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
+						</div>
+					</div>
 				</div>
 
-			</section>-->
+			</section>
 
 
 
