add jury link in nav

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 							<li><a href="#about">A Propos</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
-							<li><a href="#coachs">Coachs<!-- &amp; Jury--></a>
+							<li><a href="#coachs">Coachs &amp; Jury</a>
 							<!--<li><a href="#how-it-works">Planning</a></li>
 							<li><a href="#prizes">Prix</a>
 							<li><a href="#winners">Résultats</a>-->
