--- a/index.html
+++ b/index.html
@@ -1408,6 +1408,8 @@
 						<a href="https://sciencemeup.com/" target="_blank"><img src="images/contents/sciencemeup.png" alt="Science Me Up"></a>
 						<a href="https://www.eifer.kit.edu/" target="_blank"><img src="images/contents/eifer.png" style="background: #fff" alt="Eifer"></a>
 						<a href="https://www.edf.fr/" target="_blank"><img src="images/contents/edf.png" alt="EDF"></a>
+						<a href="http://capcod.eu/" target="_blank"><img style="height: 75px;" src="images/contents/capcod.png" alt="Capcod"></a>
+						<a href="http://blockchain-valley.io/" target="_blank"><img src="images/contents/blockchain-valley.png" alt="Blockchain Valley"></a>
 					</div>
 
 					<!--<div class="sponsors-row" data-animation="bounceIn">
