--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 							<li><a href="#about">A Propos</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
-							<!--<li><a href="#how-it-works">Planning</a></li>
+							<li><a href="#how-it-works">Planning</a></li>
 							<li><a href="#prizes">Prix</a>
-							<li><a href="#winners">Résultats</a>-->
+							<!--<li><a href="#winners">Résultats</a>-->
 							<li><a href="#sponsors">Partenaires</a></li>
 							<!--<li><a href="#faq">FAQ</a></li>-->
 
@@ -261,7 +261,7 @@
 									</ul>
 		
 									<div class="hero-buttons col-md-12 text-center">
-										<!--<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a>--><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>
+										<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a> <a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>
 										<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
 										<a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>-->
 										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
@@ -395,13 +395,13 @@
 			</section>
 
 
-			<!--<section id="planning" class="section">
+			<section id="planning" class="section">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary">Consulter le planning complet</a></div>
 					</div>
 				</div>
-			</section>-->
+			</section>
 
 
 
