--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
 				</div>
 			</section>
 
-			<!--<section id="prizes" class="section section-dark">
+			<section id="prizes" class="section section-dark">
 				
 				<div class="section-background">
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
@@ -1210,21 +1210,14 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix ÉS</h3>
-									<p>Incubation + 12 séances d’1h30 réparties sur 6 mois avec des experts d’ÉS</p>
-								</div>
-							</div>				
-							<div class="row">
-								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
-								<div class="col-xs-9">
-									<h3>Prix « RHÉNATIC »</h3>
-									<p>Proposé par Rhénatic - Cluster du Numerique<br>4 demi-journées d’accompagnement du porteur de projet</p>
+									<p>L’ES met toute son expertise au service d’un projet en l’accompagnant pendant 6 mois à raison d’une demi journée par mois en fonction des besoins du projet</p>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix STRATAGGEM</h3>
-									<p>2 demi-journées de conseil et d’aide à la conception d’un objet connecté</p>
+									<p>Accès à la passerelle IoT LoRa et 150€ de crédits sur la plateforme IoT Wavebricks</p>
 								</div>
 							</div>
 							<div class="row">
@@ -1237,15 +1230,15 @@
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
-									<h3>Prix SCALINGO</h3>
-									<p> La société Scalingo, service cloud d'hébergement web, propose deux prix. Pour le premier, 1000€ de crédits utilisables sur la plateforme, et pour le deuxième 500€ de crédits utilisables sur la plateforme.</p>
+									<h3>Prix MANA MANA</h3>
+									<p>- 3 équipes bénéficieront d’un accompagnement de nos coachs. Pour faire avancer vos projets radicaux, vous aurez besoin d’apprendre à créer une vision partagée d’équipe, à co-créer avec vos parties prenantes, à développer la motivation entre vous, à apprendre de vos erreurs !<br>- Chez Mana Mana, certains de nos clients sont de grands industriels de l’agrobusiness, du rail, de l’énergie. Nous vous proposons d’aller tester vos idées, vos prototypes à leur contact et d’apprendre.<br>- Mana Mana vous propose 3 mois d’accompagnement à raison de deux sessions d’une demi journée par mois.</p>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
-									<h3>Prix ALSACE INNOVATION</h3>
-									<p>Adhésion Alsace Innovation<br> 1/2 journée de diagnostique innovation</p>
+									<h3>Prix BLOCKCHAIN VALLEY</h3>
+									<!--<p></p>-->
 								</div>
 							</div>
 						</div>
@@ -1254,53 +1247,69 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix ALSACE DIGITALE</h3>
-									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’un accès gratuit au Startup Weekend Strasbourg du 24 au 26 novembre.</p>
+									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’un accès gratuit au Startup Weekend Strasbourg du 23 au 25 novembre.</p>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix ITS FUTURE + AGORA CALYCE</h3>
-									<p>Mise à disposition de la plateforme Cloud IoT Agora gratuitement pour 10 devices pendant 1 an et accompagnement d'Agora Calycé" + "2 demi-journées d'accompagnement par un expert ITS Future dans les projets IoT</p>
+									<p>Mise à disposition de la plateforme Cloud IoT Agora gratuitement pour 10 devices pendant 1 an et accompagnement d'Agora Calycé + 2 demi-journées d'accompagnement par un expert ITS Future dans les projets IoT</p>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix THURMELEC</h3>
-									<p>Coaching et accès à la chaîne de prototypage</p>
+									<!--<p>Coaching et accès à la chaîne de prototypage</p>-->
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
-									<h3>Prix PRGLOBALMEDIA</h3>
-									<p>Mise à disposition de l’outil Invite The Media. Un communiqué de presse rédigé, présentant le gagnant de l’événement. Un envoi en national au média local + national + presse spécialisée + pays francophone</p>
+									<h3>Prix WILD CODE SCHOOL</h3>
+									<p>Le développement du projet dans le cadre de nos projets-clients</p>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
-									<h3>Prix ALSA CALCUL</h3>
-									<p>Formation à l’Utilisation du processeur graphique parallèlement aux processeurs pour accélérer les solutions numériques;programmation GPU, outils avancés, en partenariat avec Nvidia (durée 1 journée)</p>
+									<h3>Prix ORANGE</h3>
+									<!--<p></p>-->
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
-									<h3>Prix CAISSE D'EPARGNE</h3>
-									<p>Accompagnement d'un chargé d'affaires innovation</p>
+									<h3>Prix SCALINGO</h3>
+									<p> La société Scalingo, service cloud d'hébergement web, propose deux prix. Pour le premier, 1000€ de crédits utilisables sur la plateforme, et pour les deuxième et troisième 500€ de crédits utilisables sur la plateforme.</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix GRAND E-NOV + SEMIA</h3>
+									<p>Adhésion Alsace Innovation<br> 1/2 journée de diagnostique innovation</p>
 								</div>
 							</div>
 						</div>
 
 					</div>
 
+					<h2 class="section-heading text-center" style="margin-top: 70px;"><i class="fa fa-smile-o"></i> Prix FUN - Nouveauté HIC 2018</h2>
+
+					<p class="col-md-8 col-md-offset-2 text-center">En plus des prix d'accompagnements et de mises à disposition de ressources, nous avons avec le soutien de nos partenaires souhaité proposer des récompenses un peu différentes...<br>
+					<ul class="col-md-8 col-md-offset-2" style="padding-left: 110px;">
+						<li>Sopra Steria : Adhesion et accès au Fablab de la Fabrique pour 5 séances</li>
+						<li>ES : Places pour le Racing</li><li>Technologie et Stratégie :  Instaxmini de Fujifilm bleu clairs ou imprimante photo</li>
+						<li>RS Components : Arduino</li>
+						<li>Orange : Casque VR</li>
+					</ul>
 				</div>
 
 			</section>
 
-			<section id="winners" class="section">
+			<!--<section id="winners" class="section">
 
 				<div class="container">
 
