--- a/index.html
+++ b/index.html
@@ -1294,6 +1294,7 @@
 						<li>ES : Places pour le Racing</li><li>Technologie et Stratégie :  Instaxmini de Fujifilm bleu clairs ou imprimante photo</li>
 						<li>RS Components : Arduino</li>
 						<li>Orange : Casque VR</li>
+						<li>Sogeti : 6 assistants vocaux Google Home</li>
 					</ul>
 				</div>
 
