--- a/index.html
+++ b/index.html
@@ -1200,7 +1200,7 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix ÉS</h3>
-									<p>L’ES met toute son expertise au service d’un projet en l’accompagnant pendant 6 mois à raison d’une demi journée par mois en fonction des besoins du projet</p>
+									<p>12 séances d’1h30 réparties sur 6 mois avec des experts d’ÉS</p>
 								</div>
 							</div>
 							<div class="row">
@@ -1291,7 +1291,7 @@
 					<p class="col-md-8 col-md-offset-2 text-center">En plus des prix d'accompagnements et de mises à disposition de ressources, nous avons avec le soutien de nos partenaires souhaité proposer des récompenses un peu différentes...<br>
 					<ul class="col-md-8 col-md-offset-2" style="padding-left: 110px;">
 						<li>Sopra Steria : Adhesion et accès au Fablab de la Fabrique pour 5 séances</li>
-						<li>ES : Places pour le Racing</li><li>Technologie et Stratégie :  Instaxmini de Fujifilm bleu clairs ou imprimante photo</li>
+						<li>ES : Billets « Allez Racing » pour assister à un match de Ligue 1 du RCS</li><li>Technologie et Stratégie :  Instaxmini de Fujifilm bleu clairs ou imprimante photo</li>
 						<li>RS Components : Arduino</li>
 						<li>Orange : Casque VR</li>
 						<li>Sogeti : 6 assistants vocaux Google Home</li>
