--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 								</div>
 							</div> -->
 
-							<div class="newsbox col-md-10 col-md-offset-1">
+							<!--<div class="newsbox col-md-10 col-md-offset-1">-->
 								<!--<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 19/09 et 27/09</div>
 								Deux sessions d’idéation de deux demi-journées pour transformer vos problématiques en défis !<br><br>
 								<div class="row" style="margin-bottom: 15px;">
@@ -204,7 +204,7 @@
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-lego-for-scrum-49934152394" target="_blank">Workshop Lego for SCRUM le 25/09 à 17h Sogeti</a>
 									</div>
 								</div>-->
-								<div style="font-size: 18px;color:#fff;padding-top: 8px;" class="text-center"><i class="fa fa-video-camera"></i> &nbsp;Découvrez les Webinars, pour approfondir vos connaissances avant le HIC !</div><br>
+								<!--<div style="font-size: 18px;color:#fff;padding-top: 8px;" class="text-center"><i class="fa fa-video-camera"></i> &nbsp;Découvrez les Webinars, pour approfondir vos connaissances avant le HIC !</div><br>
 								<div class="row webinars" style="margin-bottom: 15px;">
 									<div class="col-md-3">
 										<a class="btn btn-default disabled" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar2-hic-a-quoi-sert-une-plateforme-iot-50345792621" target="_blank">27/09 à 12h<br><span>A quoi sert une plateforme Iot ?</span></a>
@@ -218,8 +218,8 @@
 									<div class="col-md-3">
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar4-hic-la-blockchain-a-quoi-sert-elle-vraiment-50345989209" target="_blank">11/10 à 12h<br><span>A quoi sert vraiment la Blockchain ?</span></a>
 									</div>
-								</div>
-							</div>
+								</div>-->
+							<!--</div>-->
 								
 
 							<div class="hero-features row" style="margin-top: 45px;">
