--- a/index.html
+++ b/index.html
@@ -1014,16 +1014,6 @@
 				</div> -->
 
 				<!-- <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Léo UNBEKANDT</h4>
-							<div class="team-member-position">Scalingo</div>
-						</div>
-					</div>
-				</div> -->
-
-				<!-- <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/alban-petit.jpg" alt="Alban PETIT">
 						<div class="team-member-text">
@@ -1099,6 +1089,16 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Léo UNBEKANDT</h4>
+							<div class="team-member-position">Coach technique | Scalingo</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/teddy-wilhelm.jpg" alt="Teddy WILHELM">
 					
 						<div class="team-member-text">
@@ -1109,7 +1109,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Manuel YGUEL</h4>
